# basalt-lwx

./: .gitignore  CMakeLists.txt  CMakeLists0_test.txt  CMakeLists2_basalt_vio.txt  CMakeLists3_stereo3_with_lib.txt  CMakeLists4_stereo3_with_pangolin.txt  README.md  package.xml  package_test.xml  运行dataset的cli.txt
config/: 173_calib_vo.json  173_vio_config.json  174_calib_vo.json  174_vio_config.json  44_vio_config.json  kitti_calib.json  sys.yaml
data/: 173_calib_vo.json  173_vio_config.json  stereo3_calib.json  stereo3_config.json  sys.yaml  viobot_b_calib_vo.json
include/basalt/io/: dataset_io_euroc.h
include/basalt/linearization/: landmark_block.hpp  landmark_block_abs_dynamic.hpp  linearization_base.hpp
include/basalt/optical_flow/: frame_to_frame_optical_flow.h  multiscale_frame_to_frame_optical_flow.h  optical_flow.h  patch.h  patch_optical_flow.h  patterns.h
include/basalt/utils/: ba_utils.h  common_types.h  imu_types.h  vio_config.h
include/basalt/vi_estimator/: ba_base.h  landmark_database.h  sc_ba_base.h  sqrt_keypoint_vio.h  sqrt_keypoint_vo.h  vio_estimator.h
launch/: start_stereo20231223.sh  start_stereo3.sh  start_stereo32222.sh  stereo3.launch
src/: curve_smooth.cpp  curve_soomth.h  kalman_filter.cpp  kalman_filter.h  stereo3.cpp  stereo3_with_pangolin.cpp  time_alignment.cpp  undistorted_photometric.cpp  undistorted_photometric.h  vio.cpp  wx_ros1_io.cpp  wx_ros1_io.h  wx_ros1_io20231214185824.cpp  wx_ros1_io_zd.cpp  wx_ros2_io.cpp  wx_ros2_io.h  wx_system.cpp  wx_system.h  wx_yaml_io.cpp  wx_yaml_io.h
src/factor/: CMakeLists_bak.txt  imu_factor.h  integration_base.h
src/imu/: imu_process.cpp  imu_process.h
src/io/: dataset_io.cpp
src/linearization/: linearization_abs_qr.cpp
src/tks_pro/: data_output.hpp  tks_pro.hpp  vio_udp.hpp
src/util/: compile_date_time.cpp  compile_date_time.h
src/utility/: CMakeLists_bak.txt  utility.h
src/utils/: keypoints.cpp  vio_config.cpp
src/vi_estimator/: ba_base.cpp  landmark_database.cpp  marg_helper.cpp  sqrt_keypoint_vio.cpp  sqrt_keypoint_vo.cpp  vio_estimator.cpp
